--- a/LangGraph_chat.ipynb
+++ b/LangGraph_chat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:     Started server process [5232]\n",
+      "c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\IPython\\core\\compilerop.py:86: RuntimeWarning: coroutine 'Server.serve' was never awaited\n",
+      "  return compile(source, filename, symbol, self.flags | PyCF_ONLY_AST, 1)\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n",
+      "INFO:     Started server process [12672]\n",
       "INFO:     Waiting for application startup.\n",
       "INFO:     Application startup complete.\n",
       "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n",
-      "INFO:     ('127.0.0.1', 55779) - \"WebSocket /ws\" [accepted]\n",
+      "INFO:     ('127.0.0.1', 55719) - \"WebSocket /ws\" [accepted]\n",
       "INFO:     connection open\n"
      ]
     },
@@ -33,22 +36,110 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Server response: Received: 서울 아파트 매매 가격 알려줘\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:     127.0.0.1:55783 - \"GET / HTTP/1.1\" 200 OK\n"
+      "Received: 서울 아파트 매매 가격 알려줘\n",
+      "INFO:     127.0.0.1:55720 - \"GET / HTTP/1.1\" 200 OK\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:     ('127.0.0.1', 55785) - \"WebSocket /ws\" [accepted]\n",
+      "INFO:     ('127.0.0.1', 55722) - \"WebSocket /ws\" [accepted]\n",
       "INFO:     connection open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:55721 - \"GET /ws HTTP/1.1\" 404 Not Found\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:    Exception in ASGI application\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_12672\\1908870640.py\", line 159, in websocket_endpoint\n",
+      "    data = await websocket.receive_text()\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\websockets.py\", line 119, in receive_text\n",
+      "    self._raise_on_disconnect(message)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\websockets.py\", line 113, in _raise_on_disconnect\n",
+      "    raise WebSocketDisconnect(message[\"code\"], message.get(\"reason\"))\n",
+      "starlette.websockets.WebSocketDisconnect: (1001, '')\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_12672\\1908870640.py\", line 162, in websocket_endpoint\n",
+      "    await websocket.send_text(f\"Error: {str(e)}\")\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\websockets.py\", line 165, in send_text\n",
+      "    await self.send({\"type\": \"websocket.send\", \"text\": data})\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\websockets.py\", line 85, in send\n",
+      "    await self._send(message)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\_exception_handler.py\", line 39, in sender\n",
+      "    await send(message)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\uvicorn\\protocols\\websockets\\websockets_impl.py\", line 358, in asgi_send\n",
+      "    raise RuntimeError(msg % message_type)\n",
+      "RuntimeError: Unexpected ASGI message 'websocket.send', after sending 'websocket.close' or response already completed.\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\uvicorn\\protocols\\websockets\\websockets_impl.py\", line 242, in run_asgi\n",
+      "    result = await self.app(self.scope, self.asgi_receive, self.asgi_send)  # type: ignore[func-returns-value]\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\uvicorn\\middleware\\proxy_headers.py\", line 60, in __call__\n",
+      "    return await self.app(scope, receive, send)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\fastapi\\applications.py\", line 1054, in __call__\n",
+      "    await super().__call__(scope, receive, send)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\applications.py\", line 113, in __call__\n",
+      "    await self.middleware_stack(scope, receive, send)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\middleware\\errors.py\", line 152, in __call__\n",
+      "    await self.app(scope, receive, send)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\middleware\\exceptions.py\", line 62, in __call__\n",
+      "    await wrap_app_handling_exceptions(self.app, conn)(scope, receive, send)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\_exception_handler.py\", line 53, in wrapped_app\n",
+      "    raise exc\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\_exception_handler.py\", line 42, in wrapped_app\n",
+      "    await app(scope, receive, sender)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\routing.py\", line 715, in __call__\n",
+      "    await self.middleware_stack(scope, receive, send)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\routing.py\", line 735, in app\n",
+      "    await route.handle(scope, receive, send)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\routing.py\", line 362, in handle\n",
+      "    await self.app(scope, receive, send)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\routing.py\", line 95, in app\n",
+      "    await wrap_app_handling_exceptions(app, session)(scope, receive, send)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\_exception_handler.py\", line 53, in wrapped_app\n",
+      "    raise exc\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\_exception_handler.py\", line 42, in wrapped_app\n",
+      "    await app(scope, receive, sender)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\routing.py\", line 93, in app\n",
+      "    await func(session)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\fastapi\\routing.py\", line 383, in app\n",
+      "    await dependant.call(**solved_result.values)\n",
+      "  File \"C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_12672\\1908870640.py\", line 164, in websocket_endpoint\n",
+      "    await websocket.close()\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\websockets.py\", line 180, in close\n",
+      "    await self.send({\"type\": \"websocket.close\", \"code\": code, \"reason\": reason or \"\"})\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\websockets.py\", line 85, in send\n",
+      "    await self._send(message)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\_exception_handler.py\", line 39, in sender\n",
+      "    await send(message)\n",
+      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\uvicorn\\protocols\\websockets\\websockets_impl.py\", line 358, in asgi_send\n",
+      "    raise RuntimeError(msg % message_type)\n",
+      "RuntimeError: Unexpected ASGI message 'websocket.close', after sending 'websocket.close' or response already completed.\n",
+      "INFO:     connection closed\n",
+      "INFO:     ('127.0.0.1', 55725) - \"WebSocket /ws\" [accepted]\n",
+      "INFO:     connection open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:55724 - \"GET /ws HTTP/1.1\" 404 Not Found\n"
      ]
     }
    ],
@@ -256,99 +347,6 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: nest_asyncio in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (1.6.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:    Exception in ASGI application\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\uvicorn\\protocols\\websockets\\websockets_impl.py\", line 330, in asgi_send\n",
-      "    await self.send(data)  # type: ignore[arg-type]\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\websockets\\legacy\\protocol.py\", line 628, in send\n",
-      "    await self.ensure_open()\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\websockets\\legacy\\protocol.py\", line 938, in ensure_open\n",
-      "    raise self.connection_closed_exc()\n",
-      "websockets.exceptions.ConnectionClosedOK: received 1000 (OK); then sent 1000 (OK)\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\websockets.py\", line 85, in send\n",
-      "    await self._send(message)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\_exception_handler.py\", line 39, in sender\n",
-      "    await send(message)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\uvicorn\\protocols\\websockets\\websockets_impl.py\", line 343, in asgi_send\n",
-      "    raise ClientDisconnected from exc\n",
-      "uvicorn.protocols.utils.ClientDisconnected\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_5232\\544437326.py\", line 160, in websocket_endpoint\n",
-      "    await websocket.send_text(f\"Received: {data}\")\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\websockets.py\", line 165, in send_text\n",
-      "    await self.send({\"type\": \"websocket.send\", \"text\": data})\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\websockets.py\", line 88, in send\n",
-      "    raise WebSocketDisconnect(code=1006)\n",
-      "starlette.websockets.WebSocketDisconnect\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_5232\\544437326.py\", line 162, in websocket_endpoint\n",
-      "    await websocket.send_text(f\"Error: {str(e)}\")\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\websockets.py\", line 165, in send_text\n",
-      "    await self.send({\"type\": \"websocket.send\", \"text\": data})\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\websockets.py\", line 97, in send\n",
-      "    raise RuntimeError('Cannot call \"send\" once a close message has been sent.')\n",
-      "RuntimeError: Cannot call \"send\" once a close message has been sent.\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\uvicorn\\protocols\\websockets\\websockets_impl.py\", line 242, in run_asgi\n",
-      "    result = await self.app(self.scope, self.asgi_receive, self.asgi_send)  # type: ignore[func-returns-value]\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\uvicorn\\middleware\\proxy_headers.py\", line 60, in __call__\n",
-      "    return await self.app(scope, receive, send)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\fastapi\\applications.py\", line 1054, in __call__\n",
-      "    await super().__call__(scope, receive, send)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\applications.py\", line 113, in __call__\n",
-      "    await self.middleware_stack(scope, receive, send)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\middleware\\errors.py\", line 152, in __call__\n",
-      "    await self.app(scope, receive, send)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\middleware\\exceptions.py\", line 62, in __call__\n",
-      "    await wrap_app_handling_exceptions(self.app, conn)(scope, receive, send)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\_exception_handler.py\", line 53, in wrapped_app\n",
-      "    raise exc\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\_exception_handler.py\", line 42, in wrapped_app\n",
-      "    await app(scope, receive, sender)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\routing.py\", line 715, in __call__\n",
-      "    await self.middleware_stack(scope, receive, send)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\routing.py\", line 735, in app\n",
-      "    await route.handle(scope, receive, send)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\routing.py\", line 362, in handle\n",
-      "    await self.app(scope, receive, send)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\routing.py\", line 95, in app\n",
-      "    await wrap_app_handling_exceptions(app, session)(scope, receive, send)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\_exception_handler.py\", line 53, in wrapped_app\n",
-      "    raise exc\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\_exception_handler.py\", line 42, in wrapped_app\n",
-      "    await app(scope, receive, sender)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\routing.py\", line 93, in app\n",
-      "    await func(session)\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\fastapi\\routing.py\", line 383, in app\n",
-      "    await dependant.call(**solved_result.values)\n",
-      "  File \"C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_5232\\544437326.py\", line 164, in websocket_endpoint\n",
-      "    await websocket.close()\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\websockets.py\", line 180, in close\n",
-      "    await self.send({\"type\": \"websocket.close\", \"code\": code, \"reason\": reason or \"\"})\n",
-      "  File \"c:\\Users\\USER\\anaconda3\\envs\\nlp\\lib\\site-packages\\starlette\\websockets.py\", line 97, in send\n",
-      "    raise RuntimeError('Cannot call \"send\" once a close message has been sent.')\n",
-      "RuntimeError: Cannot call \"send\" once a close message has been sent.\n",
-      "INFO:     ('127.0.0.1', 55780) - \"WebSocket /ws\" [accepted]\n",
-      "INFO:     connection open\n"
      ]
     }
    ],
