--- a/chat.ipynb
+++ b/chat.ipynb
@@ -328,83 +328,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_prompt = \"\"\"\n",
+    "다음 데이터베이스 구조를 기반으로 사용자의 질문에 대한 SQL 쿼리를 생성해주세요:\n",
+    "\n",
+    "사용가능한 데이터 베이스 스키마:\n",
+    "{table}\n",
+    "\n",
+    "주의사항:\n",
+    "1. 관련 조건은 SQL WHERE 절 형식으로 작성해주세요.\n",
+    "2. SQL 쿼리를 작성할 때는 명확하고 효율적이어야 합니다.\n",
+    "3. 결과는 최대 {top_k}개까지만 보여주세요.\n",
+    "4. 금액에 관련된 쿼리를 작성할 때는 쉼표(,)를 제거하고 숫자로 변환해야 합니다. 가능하다면, `WITH` 절 또는 서브쿼리를 사용하여 필드를 미리 변환하고 가독성을 높이세요.\n",
+    "5. 에러가 발생하면 원인을 설명하고 수정된 쿼리를 제시해주세요.\n",
+    "6. 텍스트 검색에는 LIKE 또는 MATCH ... AGAINST를 활용하세요.\n",
+    "7. 여러 조건은 AND 또는 OR로 연결하세요.\n",
+    "8. 정렬, 그룹화 등이 필요한 경우 이를 추가로 명시하세요. 예: ORDER BY created_at DESC.\n",
+    "9. 매물들을 정렬할 때 우선순위는 위치(1순위), 가격(2순위) 순 입니다.\n",
+    "10. 쿼리만 작성하고 추가 설명은 하지 마세요.\n",
+    "11. facilities는 영어로 쳐야지 나옵니다.\n",
+    "    - pi.facilities LIKE '%ELEVATOR%' -> 엘리베이터\n",
+    "    - pi.facilities LIKE '%aircon%' -> 에이컨, 에어콘\n",
+    "12. 매물번호도 함께 보여주세요 매물번호는 property_id입니다.\n",
+    "\n",
+    "13. 지하철역에 관한 정보는 addresses 테이블의 area_name 칼럼에 있습니다.\n",
+    "    - addresses.area_name LIKE '%강남역%' -> 강남역\n",
+    "14. subway_stations 테이블에는 지하철역이 아닌 지하철이 몇호선인지가 담겨있습니다.\n",
+    "15. subway_stations 테이블은 지하철 호선을 묻는 것이 아닌 이상 사용하지마시오.\n",
+    "16. \"역세권\"은 location_distances 테이블의 distance를 사용하면 됩니다.\n",
+    "    - location_distances.distance <= 1000 -> \"역세권\"\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rentals_prompt = \"\"\"\n",
+    "17. rental_type 값은 다음과 같습니다:\n",
+    "    - 'MONTHLY': 전세\n",
+    "    - 'YEARLY': 월세\n",
+    "18. rentals 테이블에 price라는 컬럼이 없습니다. rentals 테이블에는 price 대신 deposit(보증금)과 monthly_rent(월세) 컬럼이 존재합니다.\n",
+    "\n",
+    "### 예시 질문과 쿼리:\n",
+    "\n",
+    "- 질문: \"서울시 강남구 보증금 2000에 월세 70짜리 추천해줘\"\n",
+    "\n",
+    "```sql\n",
+    "SELECT \n",
+    "    r.property_id,\n",
+    "    pi.description,\n",
+    "    pi.facilities,\n",
+    "    r.deposit AS \"보증금\",\n",
+    "    r.monthly_rent AS \"월세비\",\n",
+    "FROM rentals r\n",
+    "JOIN property_info pi ON r.property_id = pi.property_id\n",
+    "JOIN property_locations l ON pi.property_location_id = l.property_location_id\n",
+    "WHERE l.sigungu LIKE '%강남구%'\n",
+    "AND r.rental_type = 'YEARLY'\n",
+    "AND CAST(REPLACE(r.deposit, ',', '') AS INTEGER) <= 20000000\n",
+    "AND CAST(REPLACE(r.monthly_rent, ',', '') AS INTEGER) <= 700000;\n",
+    "'''\n",
+    "\n",
+    "- 질문: \"강남역 역세권 전세 10억 추천해줘\"\n",
+    "\n",
+    "```sql\n",
+    "SELECT DISTINCT \n",
+    "    r.property_id,\n",
+    "    pi.description,\n",
+    "    pi.facilities,\n",
+    "    r.deposit AS \"보증금\"\n",
+    "FROM rentals r\n",
+    "JOIN property_info pi ON r.property_id = pi.property_id\n",
+    "JOIN property_locations l ON pi.property_location_id = l.property_location_id\n",
+    "WHERE l.sigungu LIKE '%강남구%'\n",
+    "  AND r.rental_type = 'MONTHLY'\n",
+    "  AND CAST(REPLACE(r.deposit, ',', '') AS INTEGER) <= 100000000;\n",
+    "'''\n",
+    "\n",
+    "사용자 질문: {user_query}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
     "def rental_monthly(state: RealEstateState) -> RealEstateState:\n",
-    "    rental_monthly = db.get_table_info(table_names=[\"rentals\", \"property_info\", \"property_locations\"])\n",
+    "    table = db.get_table_info(table_names=[\"rentals\", \"property_info\", \"property_locations\"])\n",
     "\n",
-    "    rental_prompt = \"\"\"\n",
-    "    사용 가능한 테이블 스키마:\n",
-    "    {rental_monthly}\n",
+    "    prompt = base_prompt + rentals_prompt\n",
     "\n",
-    "    당신은 SQL 전문가입니다. \n",
-    "    데이터베이스는 {dialect} 방언을 사용합니다.\n",
-    "\n",
-    "    다음 규칙을 따라주세요:\n",
-    "        1. 한국어로 응답해주세요.\n",
-    "        2. SQL 쿼리를 작성할 때는 명확하고 효율적이어야 합니다.\n",
-    "        3. 결과는 최대 {top_k}개까지만 보여주세요.\n",
-    "        4. 금액에 관련된 쿼리를 작성할 때는 쉼표(,)를 제거하고 숫자로 변환해야 합니다. 가능하다면, `WITH` 절 또는 서브쿼리를 사용하여 필드를 미리 변환하고 가독성을 높이세요.\n",
-    "        5. 에러가 발생하면 원인을 설명하고 수정된 쿼리를 제시해주세요.\n",
-    "        6. rental_type 값은 다음과 같습니다:\n",
-    "        - 'MONTHLY': 전세\n",
-    "        - 'YEARLY': 월세\n",
-    "        7. 반드시 SELECT문에 포함되어야 하는 필드는 다음과 같습니다:\n",
-    "        - `r.property_id` (매물번호)\n",
-    "        - `l.sigungu` (시/군/구)\n",
-    "        - `p.description` (부동산 설명)\n",
-    "        - `r.deposit` (보증금)\n",
-    "        - `r.monthly_rent(월세비)\n",
-    "        - `l.latitude` (위도)\n",
-    "        - `l.longitude` (경도)\n",
-    "        8. 필요한 경우 조건을 추가로 명시하세요:\n",
-    "        - 지역 (l.sigungu, l.dong)\n",
-    "        - 가격 조건 (r.deposit, r.monthly_rent)\n",
-    "        - 거래 유형 (r.rental_type)\n",
-    "        - 가격 조건에 따라 정렬(`ORDER BY` 절에서 `ASC` 또는 `DESC`를 명시)합니다. 기본적으로 보증금은 `ASC`, 월세는 `ASC`로 정렬합니다.\n",
-    "        - 기타 사용자 요청 사항 (e.g., 방 개수, 전용 면적)\n",
-    "        9. rental_type 값이 없는 경우 전체 결과를 반환하지만, 사용자가 조건을 명시했으면 해당 조건을 반드시 반영하세요.\n",
-    "        10. 결과가 없을 경우 적절한 이유를 설명하고 대체 쿼리를 작성하세요.\n",
-    "        11. '전세', '월세' 등의 거래 조건에 따라 적절히 필터링하세요.\n",
-    "        12. `CAST(... AS DECIMAL)` 대신 `CAST(... AS INTEGER)`를 사용하세요.\n",
-    "        13. 보증금 숫자가 1000처럼 들어오면 단위가 만 원(10,000)임을 생각하고 쿼리를 짠다. 월세 숫자가 50처럼 들어오면 단위가 만 원(10,000)임을 고려한다.\n",
-    "        14. 별도의 멘트 없이 **오직 SQL 쿼리만** 작성하세요.\n",
-    "\n",
-    "    ### 예시 질문과 쿼리:\n",
-    "\n",
-    "    - 질문: \"서울시 강남구 보증금 2000에 월세 70짜리 추천해줘\"\n",
-    "\n",
-    "    ```sql\n",
-    "    SELECT \n",
-    "        r.property_id,\n",
-    "        l.sigungu,\n",
-    "        p.description,\n",
-    "        r.deposit AS \"보증금\",\n",
-    "        r.monthly_rent AS \"월세비\",\n",
-    "        l.latitude,\n",
-    "        l.longitude\n",
-    "    FROM rentals r\n",
-    "    JOIN property_info p ON r.property_id = p.property_id\n",
-    "    JOIN property_locations l ON p.property_location_id = l.property_location_id\n",
-    "    WHERE l.sigungu LIKE '%강남구%'\n",
-    "    AND r.rental_type = 'YEARLY'\n",
-    "    AND CAST(REPLACE(r.deposit, ',', '') AS INTEGER) <= 2000 * 10000\n",
-    "    AND CAST(REPLACE(r.monthly_rent, ',', '') AS INTEGER) <= 70 * 10000\n",
-    "    LIMIT 5;\n",
-    "    '''\n",
-    "\n",
-    "    \"\"\"\n",
-    "    prompt = rental_prompt.format(\n",
-    "        dialect=\"SQLite\",\n",
+    "    prompt = prompt.format(\n",
+    "        table = table,\n",
     "        top_k=5,\n",
-    "        rental_monthly=rental_monthly,\n",
+    "        user_query=state['messages'][-1].content\n",
     "    )\n",
     "\n",
     "    response = llm.invoke([\n",
-    "        SystemMessage(content=prompt),\n",
-    "        HumanMessage(state[\"messages\"][-1].content)\n",
+    "        SystemMessage(content=\"당신은 SQLite Database  쿼리를 생성하는 전문가입니다.\"),\n",
+    "        HumanMessage(prompt)\n",
     "    ])\n",
     "\n",
     "    llm_query = response.content\n",
